force-app/main/default/objects/EYI_Inventory__c/fields/EYI_View_based_on_Directions__c.field-meta.xml
<CustomField>
    <fullName>EYI_View_based_on_Directions__c</fullName>
    <label>View based on Directions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
            <value>
                <fullName>North West</fullName>
            </value>
            <value>
                <fullName>East Facing</fullName>
                <isActive>false</isActive>
                <label>East Facing</label>
            </value>
            <value>
                <fullName>North Facing</fullName>
                <isActive>false</isActive>
                <label>North Facing</label>
            </value>
            <value>
                <fullName>North-East Facing</fullName>
                <isActive>false</isActive>
                <label>North-East Facing</label>
            </value>
            <value>
                <fullName>North-West Facing</fullName>
                <isActive>false</isActive>
                <label>North-West Facing</label>
            </value>
            <value>
                <fullName>South Facing</fullName>
                <isActive>false</isActive>
                <label>South Facing</label>
            </value>
            <value>
                <fullName>South-East Facing</fullName>
                <isActive>false</isActive>
                <label>South-East Facing</label>
            </value>
            <value>
                <fullName>South-West Facing</fullName>
                <isActive>false</isActive>
                <label>South-West Facing</label>
            </value>
            <value>
                <fullName>West Facing</fullName>
                <isActive>false</isActive>
                <label>West Facing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>