force-app/main/default/objects/EYI_Inventory__c/fields/EYI_VRV_Area__c.field-meta.xml
<CustomField>
    <fullName>EYI_VRV_Area__c</fullName>
    <label>VRV Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>