force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Wing__c.field-meta.xml
<CustomField>
    <fullName>EYI_Wing__c</fullName>
    <label>Wing</label>
    <length>25</length>
    <type>Text</type>
</CustomField>