force-app/main/default/objects/EYI_Inventory__c/fields/Floor_Name__c.field-meta.xml
<CustomField>
    <fullName>Floor_Name__c</fullName>
    <label>Floor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>