force-app/main/default/objects/EYI_Inventory__c/fields/Floor_Rise__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rise__c</fullName>
    <label>Floor Rise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>