force-app/main/default/objects/EYI_Inventory__c/fields/Garden_Area_Sq_mt__c.field-meta.xml
<CustomField>
    <fullName>Garden_Area_Sq_mt__c</fullName>
    <formula>EYI_Garden_Area__c  * 0.092903</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Garden Area (Sq mt)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>