force-app/main/default/objects/EYI_Inventory__c/fields/Name_as_per_Index_II__c.field-meta.xml
<CustomField>
    <fullName>Name_as_per_Index_II__c</fullName>
    <description>MSEB details section field.</description>
    <label>Name as per Index II</label>
    <length>40</length>
    <type>Text</type>
</CustomField>