force-app/main/default/objects/EYI_Inventory__c/fields/Remarks_for_Block__c.field-meta.xml
<CustomField>
    <fullName>Remarks_for_Block__c</fullName>
    <label>Remarks for Block</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>