force-app/main/default/objects/EYI_Inventory__c/fields/Sit_Out_in_Sq_mtr__c.field-meta.xml
<CustomField>
    <fullName>Sit_Out_in_Sq_mtr__c</fullName>
    <formula>EYI_Sitout_Area__c  * 0.09290304</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sit Out in Sq.mtr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>