force-app/main/default/objects/EYI_Inventory__c/validationRules/Apartment_Ready_Date_not_future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Apartment_Ready_Date_not_future_Date</fullName>
    <active>true</active>
    <errorConditionFormula>EYI_Apartment_Ready_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Apartment Ready Date cannot be a future date</errorMessage>
</ValidationRule>