force-app/main/default/objects/EYI_Inventory__c/validationRules/OC_Date_should_not_be_the_Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>OC_Date_should_not_be_the_Future_Date</fullName>
    <active>true</active>
    <errorConditionFormula>EYI_OC_Received_Date__c  &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>EYI_OC_Received_Date__c</errorDisplayField>
    <errorMessage>OC Received Date cannot be in the future.</errorMessage>
</ValidationRule>