force-app/main/default/objects/EYI_Inventory__c/validationRules/Opportunity_already_has_tag_inventory.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_already_has_tag_inventory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(EYI_IsAutomationBypassed__c = false,ISBLANK( EYI_Opportunity__r.EYI_Inventory__c))</errorConditionFormula>
    <errorMessage>This opportunity already has tagged inventory</errorMessage>
</ValidationRule>