force-app/main/default/objects/EYI_Inventory__c/validationRules/Unit_Sold_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_Sold_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISBLANK( EYI_OC_Received_Date__c )), ISBLANK(TEXT(EYI_Unit_Sold__c )))</errorConditionFormula>
    <errorDisplayField>EYI_Unit_Sold__c</errorDisplayField>
    <errorMessage>Please select value</errorMessage>
</ValidationRule>