force-app/main/default/objects/EYI_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_Project__c</columns>
    <columns>EYI_Car_Park_Count__c</columns>
    <columns>EYI_Inventory_Number__c</columns>
    <columns>EYI_Inventory_Status__c</columns>
    <columns>EYI_SAP_Material_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EYI_Project__c</field>
        <operation>equals</operation>
        <value>Trump Towers</value>
    </filters>
    <label>All</label>
</ListView>