force-app/main/default/objects/EYI_Inventory__c/listViews/Apartment_Ready_Inventories.listView-meta.xml
<ListView>
    <fullName>Apartment_Ready_Inventories</fullName>
    <columns>NAME</columns>
    <columns>EYI_Project__c</columns>
    <columns>EYI_Car_Park_Count__c</columns>
    <columns>EYI_Inventory_Number__c</columns>
    <columns>EYI_Inventory_Status__c</columns>
    <columns>EYI_SAP_Material_Code__c</columns>
    <columns>EYI_Apartment_Ready_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Apartment Ready Inventories</label>
</ListView>