force-app/main/default/objects/EYI_Inventory__c/listViews/Leased_Inventories.listView-meta.xml
<ListView>
    <fullName>Leased_Inventories</fullName>
    <columns>NAME</columns>
    <columns>EYI_Project__c</columns>
    <columns>EYI_Tower__c</columns>
    <columns>EYI_Inventory_Number__c</columns>
    <columns>EYI_Inventory_Status__c</columns>
    <columns>EYI_Leasing_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lease__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>EYI_Leasing_Status__c</field>
        <operation>equals</operation>
        <value>Leased out</value>
    </filters>
    <filters>
        <field>EYI_Inventory_Status__c</field>
        <operation>equals</operation>
        <value>Blocked</value>
    </filters>
    <label>Leased Inventories</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Leasing_Head</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>