force-app/main/default/objects/EYI_Inventory__c/listViews/OC_Received.listView-meta.xml
<ListView>
    <fullName>OC_Received</fullName>
    <columns>NAME</columns>
    <columns>EYI_OC_Received_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EYI_OC_Received_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>OC Received</label>
    <sharedTo>
        <role>CRM_Admin</role>
        <role>CRM_Head</role>
        <role>CRM_TL</role>
        <role>Relationship_Manager</role>
        <role>Sales_CRM_Head</role>
    </sharedTo>
</ListView>